<resources>
    <string name="app_name">Hero</string>
    <string name="action_refresh">Actualizar</string>
    <string name="errorNoInternet">Sin conexion a internet. ¿Quieres activar el WIFI?</string>
    <string name="errorGetDatos">A ocurrido un error al obtener los datos</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="msgError">Error</string>

    <string name="lblRealNamer">Nombre Real</string>
    <string name="lblPower">Poder</string>
    <string name="lblHeight">Altura</string>
    <string name="lblAbility">Habilidades</string>
    <string name="lblGroups">Grupos</string>

</resources>
